[package]
name = "gstreamer-rust"
version = "0.1.0"
authors = ["kyasbal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.15.7"
glib = "0.9.3"
gtk = {version="0.8.1",optional = true}
gdk = {version="0.12.1",optional = true}

[features]
tutorial5 = ["gtk","gdk"]